Fix problems with toggling media query in Chrome Implement a workaround in pure CSS and HTML so that when media query toggles from mobile layout to desktop layout, Chrome does not display two elements that should be on the same line as block elements instead. Add more breathing room between lines in mobile resume layout now that stretching issues are corrected in the print styles. Tighten the margins reserved for date/time on the right in mobile resume layout. Cut down on cover letter text. Update some resume header text. Update text style of resume headers to emphasize the section headers yet without drawing in the eye.

--- a/resume.css
+++ b/resume.css
@@ -132,8 +132,10 @@
 }
 
 .section .organization {
-	display: inline-block; /* CAUSES ISSUES WITH WEBKIT https://bugs.webkit.org/show_bug.cgi?id=53166 */
+	display: inline-block;
 	font-weight: bold;
+
+	float: left; /* workaround for webkit bug https://bugs.webkit.org/show_bug.cgi?id=53166 */
 }
 
 .section .role {
@@ -141,7 +143,7 @@
 	padding-left: 2pt;
 
 	width: 3.5in;
-	float: right; /* CAUSES ISSUES WITH WEBKIT https://bugs.webkit.org/show_bug.cgi?id=53166 */
+	float: right;
 	font-style: italic;
 }
 
@@ -158,6 +160,7 @@
 
 .honors .organization {
 	display: inherit;
+	float: none; /* workaround for webkit bug https://bugs.webkit.org/show_bug.cgi?id=53166 */
 }
 
 li.rightalign2col {
@@ -277,6 +280,10 @@ li.leftalign2col {
 
 .section h2, .section .spacetime, .section .contribution, .heading h1 {
 	font-family: 'Book Antiqua','URW Palladio L',serif;
+}
+
+.section h2 {
+	font-variant: small-caps;
 }
 
 .section .spacetime, .footer {
