--- a/resume.mobile.css
+++ b/resume.mobile.css
@@ -53,7 +53,7 @@
 	}
 
 	.section .contribution {
-		margin-right: 1.2in;
+		margin-right: 1.1in;
 	}
 
 	.honors .contribution {
@@ -61,7 +61,7 @@
 	}
 
 	.honors .entry {
-		padding-right: 1.2in;
+		padding-right: 1.1in;
 		box-sizing: border-box;
 	}
 
@@ -74,7 +74,7 @@
 		right: 0;
 		left: auto;
 		font-size: 10pt;
-		width: 1.1in;
+		width: 1.05in;
 
 		display: -moz-box;
 		display: -webkit-box;
@@ -118,11 +118,14 @@
 		display: inline;
 	}
 
+	.section .nextline {
+		display: none; /* workaround for webkit bug https://bugs.webkit.org/show_bug.cgi?id=53166 */
+	}
+
 	.section .role {
 		width: auto;
-		display: block;
 		border: none;
-		float: none; /* CAUSES ISSUES WITH WEBKIT https://bugs.webkit.org/show_bug.cgi?id=53166 */
+		float: none;
 		padding-left: 0;
 
 		text-align: left;
@@ -194,8 +197,8 @@
 		clear: both;
 	}
 
-	.entry, .section .spacetime {
-		line-height: 12pt;
+	.section .contribution, .section .spacetime {
+		line-height: 13pt;
 	}
 
 	.entryless.first {
